Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -285,8 +285,8 @@
 													<tr>														
 														<td align="center">梁志源</td>
 														<td align="left">¥0.2</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">彬</td>
+														<td align="left">¥2</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
