--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQm5zto">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mg3Uie8">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1qWl5eRa">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.3 RC4</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJCBx9p">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hq91OX2">下载</a></td>
@@ -672,6 +678,19 @@
                     </tr>
                 </thead>
                 <tbody>
+                <tr>
+                        <td align="center">sdk-tools-r24.3.3</td>
+                        <td align="center">
+                            <a href="http://pan.baidu.com/s/1eQwEMGE">installer_r24.3.3-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1i3eUFDb">android-sdk_r24.3.3-windows.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1mgjBxA4">android-sdk_r24.3.3-macosx.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1hqu8P2s">android-sdk_r24.3.3-linux.tgz</a>
+                        </td>
+                </tr>
                 <tr>
                         <td align="center">sdk-tools-r24.3.2</td>
                         <td align="center">
