Add donator info

--- a/donate.html
+++ b/donate.html
@@ -289,8 +289,8 @@
 														<td align="left">¥2</td>
 														<td align="center"><a href="http://weibo.com/1810341433" target="_blank">陌欠0</a></td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">风拂尘</td>
+														<td align="left">¥20.74</td>
 													</tr>
 											</tbody>
 									</table>
