Add donator info

--- a/donate.html
+++ b/donate.html
@@ -295,8 +295,8 @@
 													<tr>														
 														<td align="center">星源</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">壹尘子☁️</td>
+														<td align="left">¥9.88</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
