Add donator info

--- a/donate.html
+++ b/donate.html
@@ -295,8 +295,18 @@
 													<tr>														
 														<td align="center">星源</td>
 														<td align="left">¥10</td>
-														<td align="center">壹尘子☁️</td>
+														<td align="center"><a href="https://github.com/hackerlc" target="_blank">壹尘子☁️</a></td>
 														<td align="left">¥9.88</td>
+														<td align="center">亮</td>
+														<td align="left">¥20</td>
+														<td align="center">邵珠臣</td>
+														<td align="left">¥1</td>
+													</tr>
+													<tr>														
+														<td align="center">czz</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
