--- a/donate.html
+++ b/donate.html
@@ -305,8 +305,8 @@
 													<tr>														
 														<td align="center">czz</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">yokouv</td>
+														<td align="left">¥6.66</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
