Add donator info

--- a/donate.html
+++ b/donate.html
@@ -307,8 +307,8 @@
 														<td align="left">¥1</td>
 														<td align="center">yokouv</td>
 														<td align="left">¥6.66</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">猪在飞_</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
