--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.3.1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntCamKx">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3KVNLF">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o6wzdBO">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQm5zto">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mg3Uie8">下载</a></td>
