Add donator info

--- a/donate.html
+++ b/donate.html
@@ -234,7 +234,7 @@
 													</tr>
 													<tr>														
 														<td align="center"><a href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
-														<td align="left">¥3.14</td>
+														<td align="left">¥3.14+¥10.24</td>
 														<td align="center">元方</td>
 														<td align="left">¥14.7</td>
 														<td align="center">王茂才</td>
@@ -305,12 +305,12 @@
 													<tr>														
 														<td align="center">czz</td>
 														<td align="left">¥1</td>
-														<td align="center">yokouv</td>
+														<td align="center"><a href="http://t.qq.com/smileseeyoume">新浪达人V</a></td>
 														<td align="left">¥6.66</td>
-														<td align="center">猪在飞_</td>
-														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">helloworld</td>
+														<td align="left">¥5</td>
+														<td align="center">z先生</td>
+														<td align="left">¥5</td>
 													</tr>
 											</tbody>
 									</table>
