Add donator info

--- a/donate.html
+++ b/donate.html
@@ -312,6 +312,16 @@
 														<td align="center">z先生</td>
 														<td align="left">¥5</td>
 													</tr>
+													<tr>														
+														<td align="center">飞</td>
+														<td align="left">¥6</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
