Add donator info

--- a/donate.html
+++ b/donate.html
@@ -315,8 +315,8 @@
 													<tr>														
 														<td align="center">飞</td>
 														<td align="left">¥6</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">李尧</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
