Add donator info

--- a/donate.html
+++ b/donate.html
@@ -317,8 +317,8 @@
 														<td align="left">¥6</td>
 														<td align="center">李尧</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">android coder</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
