Fix NDK install method link format

--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
                 <a name="ndk" class="anchor" href="#ndk">
                     <span class="octicon octicon-link"></span>
                 </a>NDK</h4>
-			<p>C/C++开发Android应用工具包,<code>Linux/Mac OS X 下NDK r10c</code>的安装方法请戳[这里](<a href="https://github.com/inferjay/AndroidDevTools/wiki/Installing-the-NDK-On-Linux-and-Mac-OS-X-(Darwin)">https://github.com/inferjay/AndroidDevTools/wiki/Installing-the-NDK-On-Linux-and-Mac-OS-X-(Darwin)</a></p>
+			<p>C/C++开发Android应用工具包,<code>Linux/Mac OS X 下NDK r10c</code>的安装方法请戳<a href="https://github.com/inferjay/AndroidDevTools/wiki/Installing-the-NDK-On-Linux-and-Mac-OS-X-(Darwin)">这里</a></p>
             
 			<table>
 			    <thead>
