--- a/donate.html
+++ b/donate.html
@@ -319,6 +319,16 @@
 														<td align="left">¥1</td>
 														<td align="center">android coder</td>
 														<td align="left">¥5</td>
+														<td align="center"><a href="http://t.qq.com/ainiyoulixuyaoma">孙思远</a></td>
+														<td align="left">¥3.14</td>
+													</tr>
+													<tr>														
+														<td align="center">ldm</td>
+														<td align="left">¥2</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
