Add donator info

--- a/donate.html
+++ b/donate.html
@@ -329,8 +329,8 @@
 														<td align="left">¥10</td>
 														<td align="center"><a href="http://weibo.com/2307218994">TKYOY</a></td>
 														<td align="left">¥55.55</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://t.qq.com/e15103236513">嘉利</a></td>
+														<td align="left">¥6.8</td>
 													</tr>
 											</tbody>
 									</table>
