--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Preview2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQm6690">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDBBfYp">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dD99jpf">下载</a></td>
+									</tr>
+                	<tr>
+										<td align="center">1.4 Preview1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3fEP8p">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o6kovdK">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJ5ldl5">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.3.1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntCamKx">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3KVNLF">下载</a></td>
