Add donator info

--- a/donate.html
+++ b/donate.html
@@ -332,6 +332,16 @@
 														<td align="center"><a href="http://t.qq.com/e15103236513">嘉利</a></td>
 														<td align="left">¥6.8</td>
 													</tr>
+													<tr>														
+														<td align="center">Flaris</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
