--- a/donate.html
+++ b/donate.html
@@ -335,8 +335,8 @@
 													<tr>														
 														<td align="center">Flaris</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">焉知韵</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
