Modify Material Design Guide Link To new version

--- a/index.html
+++ b/index.html
@@ -4675,7 +4675,7 @@
                     <span class="octicon octicon-link"></span>
                 </a>Google Material Design 中文版</h4>
 
-            <p>地址：<a href="http://design.1sters.com">http://design.1sters.com</a>
+            <p>地址：<a href="http://wiki.jikexueyuan.com/project/material-design/">http://wiki.jikexueyuan.com/project/material-design/</a>
             </p>
 
             <p>地址： <a href="http://www.ui.cn/Material/">http://www.ui.cn/Material/</a>
