Add donator info

--- a/donate.html
+++ b/donate.html
@@ -338,8 +338,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">焉知韵</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">袁超</td>
+														<td align="left">¥3</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
