Add donator info

--- a/donate.html
+++ b/donate.html
@@ -340,8 +340,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">袁超</td>
 														<td align="left">¥3</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">技术小黑屋</td>
+														<td align="left">¥7.7</td>
 													</tr>
 											</tbody>
 									</table>
