--- a/donate.html
+++ b/donate.html
@@ -340,8 +340,18 @@
 														<td align="left">¥10.24</td>
 														<td align="center">袁超</td>
 														<td align="left">¥3</td>
-														<td align="center">技术小黑屋</td>
+														<td align="center"><a href="http://droidyue.com">技术小黑屋</a></td>
 														<td align="left">¥7.7</td>
+													</tr>
+													<tr>														
+														<td align="center">泽宇</td>
+														<td align="left">¥10</td>
+														<td align="center">肖</td>
+														<td align="left">¥1.43</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 													</tr>
 											</tbody>
 									</table>
