Add donator info

--- a/donate.html
+++ b/donate.html
@@ -348,8 +348,8 @@
 														<td align="left">¥10</td>
 														<td align="center">肖</td>
 														<td align="left">¥1.43</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">小燕子</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
