Add donator info

--- a/donate.html
+++ b/donate.html
@@ -306,7 +306,7 @@
 													<tr>														
 														<td align="center">czz</td>
 														<td align="left">¥1</td>
-														<td align="center"><a href="http://t.qq.com/smileseeyoume">新浪达人V</a></td>
+														<td align="center"><a href="http://t.qq.com/smileseeyoume" target="_blank">新浪达人V</a></td>
 														<td align="left">¥6.66</td>
 														<td align="center">helloworld</td>
 														<td align="left">¥5</td>
@@ -320,7 +320,7 @@
 														<td align="left">¥1</td>
 														<td align="center">android coder</td>
 														<td align="left">¥5</td>
-														<td align="center"><a href="http://t.qq.com/ainiyoulixuyaoma">孙思远</a></td>
+														<td align="center"><a href="http://t.qq.com/ainiyoulixuyaoma" target="_blank">孙思远</a></td>
 														<td align="left">¥3.14</td>
 													</tr>
 													<tr>														
@@ -328,9 +328,9 @@
 														<td align="left">¥2</td>
 														<td align="center">找刺激</td>
 														<td align="left">¥10</td>
-														<td align="center"><a href="http://weibo.com/2307218994">TKYOY</a></td>
+														<td align="center"><a href="http://weibo.com/2307218994" target="_blank">TKYOY</a></td>
 														<td align="left">¥55.55</td>
-														<td align="center"><a href="http://t.qq.com/e15103236513">嘉利</a></td>
+														<td align="center"><a href="http://t.qq.com/e15103236513" target="_blank">嘉利</a></td>
 														<td align="left">¥6.8</td>
 													</tr>
 													<tr>														
@@ -340,7 +340,7 @@
 														<td align="left">¥10.24</td>
 														<td align="center">袁超</td>
 														<td align="left">¥3</td>
-														<td align="center"><a href="http://droidyue.com">技术小黑屋</a></td>
+														<td align="center"><a href="http://droidyue.com" target="_blank">技术小黑屋</a></td>
 														<td align="left">¥7.7</td>
 													</tr>
 													<tr>														
@@ -350,8 +350,8 @@
 														<td align="left">¥1.43</td>
 														<td align="center">小燕子</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://t.qq.com/xyh666168" target="_blank">自由飞翔</a></td>
+														<td align="left">¥16.8</td>
 													</tr>
 											</tbody>
 									</table>
