Add donator info

--- a/donate.html
+++ b/donate.html
@@ -343,7 +343,7 @@
 														<td align="center"><a href="http://droidyue.com" target="_blank">技术小黑屋</a></td>
 														<td align="left">¥7.7</td>
 													</tr>
-													<tr>														
+													<tr>													
 														<td align="center">泽宇</td>
 														<td align="left">¥10</td>
 														<td align="center">肖</td>
@@ -352,6 +352,16 @@
 														<td align="left">¥5</td>
 														<td align="center"><a href="http://t.qq.com/xyh666168" target="_blank">自由飞翔</a></td>
 														<td align="left">¥16.8</td>
+													</tr>
+													<tr>														
+														<td align="center"><a href="http://t.qq.com/nxy1976" target="_blank">andy</a></td>
+														<td align="left">¥50</td>
+														<td align="center">周公不解梦</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 													</tr>
 											</tbody>
 									</table>
