Add donator info

--- a/donate.html
+++ b/donate.html
@@ -358,8 +358,8 @@
 														<td align="left">¥50</td>
 														<td align="center">周公不解梦</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">邓功财</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
