Add donator info

--- a/donate.html
+++ b/donate.html
@@ -360,8 +360,8 @@
 														<td align="left">¥5</td>
 														<td align="center">邓功财</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">AAA星</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
