--- a/donate.html
+++ b/donate.html
@@ -363,6 +363,16 @@
 														<td align="center">AAA星</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">vcokey</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
