Add donator info

--- a/donate.html
+++ b/donate.html
@@ -366,8 +366,8 @@
 													<tr>														
 														<td align="center">vcokey</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">家硕</td>
+														<td align="left">¥4.01</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
