--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Preview3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mg1UbRM">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDhj81j">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQEr6q2">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.4 Preview2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQm6690">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1dDBBfYp">下载</a></td>
@@ -242,6 +248,12 @@
 										<td align="center"><a href="http://pan.baidu.com/s/1i3fEP8p">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1o6kovdK">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJ5ldl5">下载</a></td>
+									</tr>
+									<tr>
+										<td align="center">1.3.2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJ7n7WR">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sjomEJz">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntDxrVb">下载</a></td>
 									</tr>
                 	<tr>
 										<td align="center">1.3.1</td>
