Add donator info

--- a/donate.html
+++ b/donate.html
@@ -368,8 +368,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">家硕</td>
 														<td align="left">¥4.01</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">唯通心灵</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
