Add donator info

--- a/donate.html
+++ b/donate.html
@@ -370,8 +370,8 @@
 														<td align="left">¥4.01</td>
 														<td align="center">唯通心灵</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://jp1017.github.io">捕风的汉子</a></td>
+														<td align="left">¥8.27</td>
 													</tr>
 											</tbody>
 									</table>
