Add Android Studio 1.4 Beta Link

--- a/donate.html
+++ b/donate.html
@@ -376,8 +376,8 @@
 													<tr>														
 														<td align="center">无语</td>
 														<td align="left">¥6</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">JIM</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
