--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Beta</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDqDuEl">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hqwCRKo">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJKfmVx">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.4 Preview3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mg1UbRM">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1dDhj81j">下载</a></td>
