Add donator info

--- a/donate.html
+++ b/donate.html
@@ -378,8 +378,8 @@
 														<td align="left">¥6</td>
 														<td align="center">JIM</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Buddha</td>
+														<td align="left">¥3</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
