--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
 								<p>大连东软信息学院镜像服务器地址: </p>								
 								<p><code>http://mirrors.neusoft.edu.cn</code> 端口：80</p>
 								</li>
+								<li>
+								<p>腾讯Bugly 镜像: </p>								
+								<p><code>http://android-mirror.bugly.qq.com</code> 端口：8080</p>
+								<p>腾讯镜像使用方法:<a href="http://android-mirror.bugly.qq.com:8080/include/usage.html">http://android-mirror.bugly.qq.com:8080/include/usage.html</a></p>		
+								</li>
 						</ol>
             <p><strong>使用方法</strong>：</p>
             <ol>
