Add Android Studio 1.4 beta2 Link

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Beta2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1gdg0lQr">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQqB9se">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hqJDL8C">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.4 Beta</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1dDqDuEl">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hqwCRKo">下载</a></td>
