Add donator info

--- a/donate.html
+++ b/donate.html
@@ -380,8 +380,8 @@
 														<td align="left">¥10</td>
 														<td align="center">Buddha</td>
 														<td align="left">¥3</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">离人歌</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
