--- a/donate.html
+++ b/donate.html
@@ -383,6 +383,16 @@
 														<td align="center">离人歌</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">翔宇</td>
+														<td align="left">¥8.88</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
