Add donator info

--- a/donate.html
+++ b/donate.html
@@ -390,8 +390,8 @@
 														<td align="left">¥20</td>
 														<td align="center">幻梦流天</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">九霖</td>
+														<td align="left">0.01元</td>
 													</tr>
 											</tbody>
 									</table>
