Add donator info

--- a/donate.html
+++ b/donate.html
@@ -393,6 +393,16 @@
 														<td align="center">九霖</td>
 														<td align="left">0.01元</td>
 													</tr>
+													<tr>														
+														<td align="center">luz</td>
+														<td align="left">¥8.8</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
