--- a/donate.html
+++ b/donate.html
@@ -396,8 +396,8 @@
 													<tr>														
 														<td align="center">luz</td>
 														<td align="left">¥8.8</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://t.qq.com/yyl719133368">杨燕龙</a></td>
+														<td align="left">¥8.2</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
