Add donator info

--- a/donate.html
+++ b/donate.html
@@ -398,8 +398,8 @@
 														<td align="left">¥8.8</td>
 														<td align="center"><a href="http://t.qq.com/yyl719133368">杨燕龙</a></td>
 														<td align="left">¥8.2</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">鸣</td>
+														<td align="left">¥20</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
