Add donator info

--- a/donate.html
+++ b/donate.html
@@ -400,6 +400,16 @@
 														<td align="left">¥8.2</td>
 														<td align="center">鸣</td>
 														<td align="left">¥20</td>
+														<td align="center">Bernnnnnie</td>
+														<td align="left">¥3</td>
+													</tr>
+													<tr>														
+														<td align="center">撩开被子放个P</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
