--- a/donate.html
+++ b/donate.html
@@ -406,8 +406,8 @@
 													<tr>														
 														<td align="center">撩开被子放个P</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">欧</td>
+														<td align="left">¥3</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
