--- a/donate.html
+++ b/donate.html
@@ -408,6 +408,16 @@
 														<td align="left">¥1</td>
 														<td align="center">欧</td>
 														<td align="left">¥3</td>
+														<td align="center">UFO</td>
+														<td align="left">¥0.1</td>
+														<td align="center">Drizzle</td>
+														<td align="left">¥5</td>
+													</tr>
+													<tr>														
+														<td align="center"><a href="http://www.licheedev.com/">某黎</a></td>
+														<td align="left">¥8.8</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
