--- a/donate.html
+++ b/donate.html
@@ -416,8 +416,8 @@
 													<tr>														
 														<td align="center"><a href="http://www.licheedev.com/">某黎</a></td>
 														<td align="left">¥8.8</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">莫紧</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
