Add donator info

--- a/donate.html
+++ b/donate.html
@@ -420,8 +420,8 @@
 														<td align="left">¥10</td>
 														<td align="center">liyuhang1997</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="https://github.com/joefei">虚无</a></td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
