--- a/donate.html
+++ b/donate.html
@@ -423,6 +423,16 @@
 														<td align="center"><a href="https://github.com/joefei">虚无</a></td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">翌</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
