--- a/donate.html
+++ b/donate.html
@@ -426,8 +426,8 @@
 													<tr>														
 														<td align="center">翌</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">不色盲</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
