Add donator info

--- a/donate.html
+++ b/donate.html
@@ -428,8 +428,8 @@
 														<td align="left">¥10</td>
 														<td align="center">不色盲</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">思念的风</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
