--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Beta3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1qWQjExQ">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQlm5yi">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1jGH83e2">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.4 Beta2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1gdg0lQr">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQqB9se">下载</a></td>
