Add donator info

--- a/donate.html
+++ b/donate.html
@@ -433,6 +433,16 @@
 														<td align="center"><a href="http://jiajixin.cn">寒江不钓</a></td>
 														<td align="left">¥10.24</td>
 													</tr>
+													<tr>														
+														<td align="center"><a href="http://www.sherryblue.org">雪莉蓝</a></td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
