Add donator info

--- a/donate.html
+++ b/donate.html
@@ -436,8 +436,8 @@
 													<tr>														
 														<td align="center"><a href="http://www.sherryblue.org">雪莉蓝</a></td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">瑜坚</td>
+														<td align="left">¥6.66</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
