--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.4 Beta4</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o65psmA">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDJeMtF">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntIO4Q1">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.4 Beta3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1qWQjExQ">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQlm5yi">下载</a></td>
