--- a/donate.html
+++ b/donate.html
@@ -438,8 +438,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">瑜坚</td>
 														<td align="left">¥6.66</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">zolaZhang</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
