--- a/donate.html
+++ b/donate.html
@@ -440,8 +440,8 @@
 														<td align="left">¥6.66</td>
 														<td align="center">zolaZhang</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Leansmall</td>
+														<td align="left">¥6.8</td>
 													</tr>
 											</tbody>
 									</table>
