--- a/donate.html
+++ b/donate.html
@@ -239,7 +239,7 @@
 														<td align="center">元方</td>
 														<td align="left">¥14.7</td>
 														<td align="center">王茂才</td>
-														<td align="left">¥5</td>
+														<td align="left">¥5+¥5.12</td>
 														<td align="center">毛毛虫</td>
 														<td align="left">¥1.64</td>
 													</tr>
