Add donator info

--- a/donate.html
+++ b/donate.html
@@ -443,6 +443,16 @@
 														<td align="center">Leansmall</td>
 														<td align="left">¥6.8</td>
 													</tr>
+													<tr>														
+														<td align="center">独特逍遥</td>
+														<td align="left">¥50</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
