Add donator info

--- a/donate.html
+++ b/donate.html
@@ -446,12 +446,12 @@
 													<tr>														
 														<td align="center">独特逍遥</td>
 														<td align="left">¥50</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">嘉树</td>
+														<td align="left">¥20</td>
+														<td align="center">刘大猛</td>
+														<td align="left">¥10</td>
+														<td align="center">先睿</td>
+														<td align="left">¥18.88</td>
 													</tr>
 											</tbody>
 									</table>
