Add donator info

--- a/donate.html
+++ b/donate.html
@@ -458,8 +458,8 @@
 														<td align="left">¥20.48</td>
 														<td align="center">默风</td>
 														<td align="left">¥9.99</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">蛋炒饭</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
