--- a/donate.html
+++ b/donate.html
@@ -460,8 +460,8 @@
 														<td align="left">¥9.99</td>
 														<td align="center">蛋炒饭</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">土豪</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
