Add donator info

--- a/donate.html
+++ b/donate.html
@@ -463,6 +463,16 @@
 														<td align="center">土豪</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">yokia</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
