--- a/donate.html
+++ b/donate.html
@@ -466,8 +466,8 @@
 													<tr>														
 														<td align="center">yokia</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Tim</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
