Add donator info

--- a/donate.html
+++ b/donate.html
@@ -468,8 +468,8 @@
 														<td align="left">¥1</td>
 														<td align="center">Tim</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">雪狼</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
