--- a/donate.html
+++ b/donate.html
@@ -470,6 +470,16 @@
 														<td align="left">¥5</td>
 														<td align="center">雪狼</td>
 														<td align="left">¥5</td>
+														<td align="center">靖</td>
+														<td align="left">¥2</td>
+													</tr>
+													<tr>														
+														<td align="center">soga</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
