Add donator info

--- a/donate.html
+++ b/donate.html
@@ -476,8 +476,8 @@
 													<tr>														
 														<td align="center">soga</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">AnT</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
