Add donator info

--- a/donate.html
+++ b/donate.html
@@ -478,8 +478,8 @@
 														<td align="left">¥5</td>
 														<td align="center">AnT</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">pjfox163</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
