Modify donator name info

--- a/donate.html
+++ b/donate.html
@@ -474,7 +474,7 @@
 														<td align="left">¥2</td>
 													</tr>
 													<tr>														
-														<td align="center">soga</td>
+														<td align="center">菅雨晨</td>
 														<td align="left">¥5</td>
 														<td align="center">AnT</td>
 														<td align="left">¥1</td>
