add donator info

--- a/donate.html
+++ b/donate.html
@@ -480,6 +480,16 @@
 														<td align="left">¥1</td>
 														<td align="center">pjfox163</td>
 														<td align="left">¥10</td>
+														<td align="center">小书</td>
+														<td align="left">¥20</td>
+													</tr>
+													<tr>														
+														<td align="center">濯锈</td>
+														<td align="left">¥2</td>
+														<td align="center">Sean</td>
+														<td align="left">¥20</td>
+														<td align="center">乘风归去</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
