add donator info

--- a/donate.html
+++ b/donate.html
@@ -490,8 +490,8 @@
 														<td align="left">¥20</td>
 														<td align="center">乘风归去</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">桔子先生</td>
+														<td align="left">¥5</td>
 													</tr>
 											</tbody>
 									</table>
