add donator info

--- a/donate.html
+++ b/donate.html
@@ -493,6 +493,16 @@
 														<td align="center">桔子先生</td>
 														<td align="left">¥5</td>
 													</tr>
+													<tr>														
+														<td align="center">令劼</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left">¥0.92</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
