add donator info

--- a/donate.html
+++ b/donate.html
@@ -491,13 +491,13 @@
 														<td align="center">乘风归去</td>
 														<td align="left">¥10</td>
 														<td align="center">桔子先生</td>
-														<td align="left">¥5</td>
+														<td align="left">¥10</td>
 													</tr>
 													<tr>														
-														<td align="center">令劼</td>
-														<td align="left">¥5</td>
-														<td align="center"></td>
+														<td align="center">我不是逗逼，只是有点逗</td>
 														<td align="left">¥0.92</td>
+														<td align="center">绍道</td>
+														<td align="left">¥12</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
