add donator info

--- a/donate.html
+++ b/donate.html
@@ -503,6 +503,16 @@
 														<td align="center">健</td>
 														<td align="left">¥6</td>
 													</tr>
+													<tr>														
+														<td align="center">葵</td>
+														<td align="left">¥0.3</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
