--- a/donate.html
+++ b/donate.html
@@ -506,10 +506,10 @@
 													<tr>														
 														<td align="center">葵</td>
 														<td align="left">¥0.3</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">贾保康</td>
+														<td align="left">¥10</td>
+														<td align="center">Hisos</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
